# cfrontend

./: Makefile.am  README  configure.ac  init-autotools  rm-autofiles
ex-c/: ex1.c  ex1.cpp  wmm-mp.cpp
src/: Makefile.am
src/cfrontend/: Makefile.am  assumePass.cpp  cfrontend.cpp  cfrontend.h  llvmPass.cpp  llvmPass.h  llvmUtils.cpp  llvmUtils.h  program.cpp  program.h  program.h.old  testProgram.cpp  utils.h  z3Handler.h
