# VPATH = $(abs_srcdir)

lib_LTLIBRARIES = libcfrontend.la

libcfrontend_ladir = $(includedir)/cfrontend

libcfrontend_la_SOURCES = \
	utils.h \
	cfrontend.h cfrontend.cpp \
	llvmPass.h assumePass.cpp llvmPass.cpp \
	llvmUtils.h llvmUtils.cpp \
	program.h program.cpp \
	testProgram.cpp

libcfrontend_la_HEADERS = \
	cfrontend.h \
	program.h \
	utils.h
